leptos_macro/tests/view/15_children_missing.stderr
error[E0277]: component `Inner` requires children
  --> tests/view/15_children_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42 generic_fun=|| true>
   |              ^^^^^ children required
   |
help: the trait `required_Inner_children` is not implemented for `Inner::Absent`
  --> tests/view/15_children_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
   = note: add child elements between the opening and closing tags
note: required by a bound in `Inner::PresenceBuilder::<(__F0, __F1, __F2)>::require_props`
  --> tests/view/15_children_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^ required by this bound in `PresenceBuilder::<(__F0, __F1, __F2)>::require_props`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `check_missing` exists for struct `Inner::PresenceBuilder<(Inner::Present, Inner::Present, Inner::Absent)>`, but its trait bounds were not satisfied
  --> tests/view/15_children_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42 generic_fun=|| true>
   |              ^^^^^ method cannot be called due to unsatisfied trait bounds
...
16 | #[component]
   | ------------ method `check_missing` not found for this struct because it doesn't satisfy `Inner::Absent: required_Inner_children`
   |
note: trait bound `Inner::Absent: required_Inner_children` was not satisfied
  --> tests/view/15_children_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
note: the trait `required_Inner_children` must be implemented
  --> tests/view/15_children_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
